POSTing cars works for single and bulk
